--- a/src/app/Product/one-product/one-product.component.scss
+++ b/src/app/Product/one-product/one-product.component.scss
@@ -346,17 +346,103 @@ hr {
   margin-top: 18px;
   margin-left: 88px;
 }
-.msg{
+.msg {
   text-align: center;
   margin-left: 134px;
   margin-right: -115px;
   color: #888b8d;
   font-family: Avenir Medium;
 }
-.cartmsg{
+.cartmsg {
   text-align: center;
   margin-left: 157px;
   margin-right: -115px;
   color: #888b8d;
   font-family: Avenir Medium;
+}
+.myBtn {
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: #ffeeee !important;
+  color: #7e5a5a !important;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 37px;
+  font-family: Avenir Medium;
+  font-weight: 600;
+  width: 148px;
+}
+.suppotinput {
+  border: 2px solid gray;
+  height: 2.8rem;
+  width: 27rem;
+  margin-left: 15px;
+}
+.btnmodelsave {
+  background-color: rgb(47, 57, 65) !important;
+  color: rgb(255, 255, 255) !important;
+  border-color: rgb(47, 57, 65) !important;
+}
+.supportmodel {
+  margin-top: 20rem;
+}
+
+::ng-deep .modal-dialog {
+  @media (min-width: 576px) {
+    margin: 8em auto !important;
+  }
+}
+label {
+  margin-left: 18px;
+  font-family: Avenir Medium;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+.btnfile {
+  border-width: 0.142857rem;
+  border-color: rgb(216, 220, 222);
+  border-style: dashed;
+  border-radius: 0.357143rem;
+  background-color: rgb(255, 255, 255);
+  opacity: 0.9;
+  display: block;
+  color: rgb(47, 57, 65);
+  height: 4rem;
+  width: 27rem;
+  margin-left: 12px;
+  margin-top: 11px;
+}
+::-webkit-file-upload-button {
+  background: black;
+  background-color: #ffeeee !important;
+  color: #7e5a5a !important;
+  height: 36px;
+  margin-top: 4px;
+  line-height: 0;
+  border: none;
+  cursor: pointer;
+}
+.fa-question-circle {
+  margin-right: 8px;
+  font-size: 22px;
+}
+.modal-title {
+  font-weight: 700;
+  text-align: center;
+  letter-spacing: 0.0214286rem;
+  line-height: 1.5;
+  font-size: 21px;
+  -webkit-box-flex: 1;
+  flex-grow: 1;
+  margin-bottom: 2px;
+  color: rgb(126, 90, 90) !important;
+}
+.invalid-feedback {
+  margin-left: 17px;
+  margin-top: 9px;
 }
